# HPCgear

./: .gitignore  README.md
include/: gnlaunch.hpp  gnworker.hpp  hglaunch.hpp  hgworker.hpp
src/: gearWorker.cpp  workerConsoleUI.cpp
workers/cudaPiEstimator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cudaPiEstimator.cu  cudaPiEstimator.hpp  cuda_worker  cuda_worker_cli
